--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="root">
+        <div class="wrapper"></div>
+        <div class="wrapper"></div>
+        <div class="wrapper"></div>
+    </div>
 </body>
 <script src="first.js"></script>
 </html>
