Const-var &-let - ivestigation

--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
         <div class="wrapper"></div>
     </div>
 </body>
-<script src="first.js"></script>
+<script src="logic.js"></script>
 </html>
